--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,10 @@
 #root {
-  height: 100%;
-  width: 100%;
+  height: 100vh; /* Set height to 100% of viewport height */
+  width: 100vw; /* Set width to 100% of viewport width */
+  overflow: auto;
   margin: 0;
   padding: 0;
   text-align: center;
   background-color: #9e2a2b;
   color: #fff3b0;
-}
-
-html, body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
 }
