--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -23,6 +23,17 @@ Card {
 
 .trait {
     padding: 0 0 0 5px;
-    color: red;
+    color: darkred;
     text-align: center;
+}
+
+.button-container {
+}
+
+button {
+    margin: 8px;
+}
+
+.delete-button {
+    background-color: darkred;
 }
