--- a/src/components/Forms.css
+++ b/src/components/Forms.css
@@ -1,4 +1,11 @@
-.Forms {
+form {
+    margin: 25px;
+    padding: 10px 50px 50px 50px;
+    border-radius: 25px;
+    background-color: black;
+}
+
+.forms {
     height: fit-content;
     display: flex;
     justify-content: center;
@@ -6,9 +13,6 @@
     padding: 0 0 25px 0;
 }
 
-form {
-    margin: 25px;
-    padding: 10px 50px 50px 50px;
-    border-radius: 25px;
-    background-color: black;
+.action-button {
+    
 }
