--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,6 @@
   margin: 0;
   padding: 0;
   text-align: center;
-  background-color: #9e2a2b;
-  color: #fff3b0;
+  background-color: #d4a373;
+  color: #fefae0;
 }
